tests/baselines/reference/parserConstructorDeclaration11.errors.txt
tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration11.ts(2,14): error TS1098: Type parameter list cannot be empty.


==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration11.ts (1 errors) ====
    class C {
      constructor<>() { }
                 ~~
!!! error TS1098: Type parameter list cannot be empty.
    }